new attempt to keep https

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<h2>W3<br />
 									Cami</h2>
 								<p>HTML5 camera interaction game</p>
-								<a href="https://kahrzdn.github.io/cami" target="_blank"><span class="label">Cami</span></a>
+								<a href="https://kahrzdn.github.io/cami/index.html" target="_blank"><span class="label">Cami</span></a>
 							</header>
 						</div>
 					</section>
