--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BERLIN W-Compilation</h2>
-							<p>30 Weeks in Berlin<br />
-							30 protypes<br />
+							<p>26 Weeks in Berlin<br />
+							26 protypes<br />
 							crafted by Carsten Jørgensen</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -58,7 +58,7 @@
 								<h2>W1<br />
 								Match
 								</h2>
-								<p>A game of differences and equality</p>
+								<p>A puzzle game of differences and equality</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
