--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 								<h2>W2<br />
 								Zoom Navi</h2>
 								<p>Interaction experiment of navigation with zooming</p>
+
 							</div>
 						</section>
 					</section>
@@ -82,11 +83,24 @@
 								<h2>W3<br />
 									Cami</h2>
 								<p>HTML5 camera interaction game</p>
+								For Chrome and Firefox on Desktop and Mobile
 								<a href="https://kahrzdn.github.io/cami/index.html"><span class="label">Cami</span></a>
 							</header>
 						</div>
 					</section>
 
+<!-- Four -->
+					<section id="four" class="wrapper style4 special">
+						<div class="inner">
+							<header class="major">
+								<h2>W4<br />
+									KIWI</h2>
+								<p>Multiuser mathcing game</p>
+								HTML5, Node.js, Socket.IO
+								<a href="http://l1l.dk/kiwi"><span class="label">Cami</span></a>
+							</header>
+						</div>
+					</section>
 				<!-- CTA -->
 			
 
