--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+					<section id="two" class="wrapper style2 special">
+						<div class="inner">
+							<header class="major">
 								<h2>W2<br />
 								Zoom Navi</h2>
-								<p>Interaction experiment of navigation with zooming</p>
-
-							</div>
-						</section>
+								<p>Interaction experiment of navigation with tap zooming in and auto zooming out</p>
+								<a href="http://l1l.dk/zoomtapping"><span class="label">zoomtapping</span></a>
+							</header>
+						</div>
 					</section>
 
 				<!-- Three -->
@@ -97,7 +97,7 @@
 									KIWI</h2>
 								<p>Multiuser mathcing game</p>
 								HTML5, Node.js, Socket.IO
-								<a href="http://l1l.dk/kiwi"><span class="label">Cami</span></a>
+								<a href="http://l1l.dk/kiwi">http://l1l.dk/kiwi<span class="label"></span></a>
 							</header>
 						</div>
 					</section>
