--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<h2>W3<br />
 									Cami</h2>
 								<p>HTML5 camera interaction game</p>
-								For Chrome and Firefox on Desktop and Mobile
+								<p>For Chrome and Firefox on Desktop and Mobile</p>
 								<a href="https://kahrzdn.github.io/cami/index.html"><span class="label">Cami</span></a>
 							</header>
 						</div>
@@ -96,7 +96,7 @@
 								<h2>W4<br />
 									KIWI</h2>
 								<p>Multiuser mathcing game</p>
-								HTML5, Node.js, Socket.IO
+								<p>HTML5, Node.js, Socket.IO</p>
 								<a href="http://l1l.dk/kiwi">http://l1l.dk/kiwi<span class="label"></span></a>
 							</header>
 						</div>
