--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<h2>W2<br />
 								Zoom Navi</h2>
 								<p>Interaction experiment of navigation with tap zooming in and auto zooming out</p>
-								<a href="http://l1l.dk/zoomtapping"><span class="label">zoomtapping</span></a>
+								<a href="http://l1l.dk/zoomtapper"><span class="label">zoomtapping</span></a>
 							</header>
 						</div>
 					</section>
@@ -93,7 +93,7 @@
 					<section id="four" class="wrapper style4 special">
 						<div class="inner">
 							<header class="major">
-								<h2>W4<br />
+								<h2>W4<br />	
 									KIWI</h2>
 								<p>Multiuser mathcing game</p>
 								<p>HTML5, Node.js, Socket.IO</p>
