--- a/index.html
+++ b/index.html
@@ -117,6 +117,21 @@
 							</header>
 						</div>
 					</section>
+					<!-- Six -->
+					<section id="six" class="wrapper style6 special">
+						<div class="inner">
+							<header class="major">
+								<h2>W6<br />	
+									Basket</h2>
+								<p>HTML5 camera interaction game</p>
+																<p>HTML5,JS,Phaser.IO</p>
+								<p>For Chrome and Firefox on Desktop and Mobile</p>
+								<a href="https://kahrzdn.github.io/basket/index.html"><span class="label">Basket</span></a>
+							</header>
+							</header>
+						</div>
+					</section>
+
 				<!-- CTA -->
 			
 
