links and typos

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<header class="major">
 								<h2>W4<br />	
 									KIWI</h2>
-								<p>Multiuser mathcing game</p>
+								<p>Multiuser matching game</p>
 								<p>HTML5,JS,Phaser.io, Node.js, Socket.IO</p>
 								<a href="http://l1l.dk/kiwi">http://l1l.dk/kiwi<span class="label"></span></a>
 							</header>
@@ -138,11 +138,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="http://twitter.com/kahrzdn" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/to.bogstaver" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/kahrzdn/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						
+							<li><a href="mailto:berlin@comashell.dk" class="icon fa-envelope-o"><span class="label">matl</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Carsten Jørgensen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
