--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 						<div class="image"><img src="images/movement.jpg" alt="" /></div><div class="content">
 								<h2>W5<br />	
 									Movement Watch</h2>
-								<p>Android Wear Watchface displaying movements on a 24-hour scale</p>
+								<p>Android Wear Watchface displaying the distribution of steps on a 24-hour time-scale. The
+									watch will show when you are active.</p>
 								<p>Android Wear, Java</p>
 				
 						</div>
