--- a/gifimitate/index.html
+++ b/gifimitate/index.html
@@ -63,7 +63,7 @@
 
 <input type="file" id="file-upload" onchange="handleFiles(this.files)" accept="image/gif"/>
 <div class="sourcegif">
-    <img id="blah" src="./example_gifs/dance.gif"/>
+    <img id="blah" src="./dance.gif"/>
 </div>
 <script src="js/lib/libgif.js"></script>
 <script src="js/lib/rubbable.js"></script>
