--- a/gifimitate/index.html
+++ b/gifimitate/index.html
@@ -39,7 +39,7 @@
         display: none;
     }
 </style>
-<link rel="stylesheet" href="https://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<link rel="stylesheet" href="buttons.css">
 <head>
 
     <meta charset="utf-8">
