--- a/gifimitate/index.html
+++ b/gifimitate/index.html
@@ -63,10 +63,10 @@
 
 <input type="file" id="file-upload" onchange="handleFiles(this.files)" accept="image/gif"/>
 <div style="width: 100%; overflow: hidden;">
-    <div class="sourcegif" style="float: left;">
+    <div class="sourcegif"  style="width:50%; float: left;">
         <img id="blah" src="./dance.gif"/>
     </div>
-    <div style="float: right;">
+    <div style="width:50% float: right;">
         <a id="giflink" download="YourFileName.gif" href="data:image/gif;">
             <img id="gifimage">
         </a>
