--- a/gifimitate/index.html
+++ b/gifimitate/index.html
@@ -84,7 +84,7 @@
 
 <script type="text/javascript">
     var sup1;
-    sup1 = new SuperGif ({gif: document.getElementById ('blah'), max_width:100});//window.innerWidth/2);
+    sup1 = new SuperGif ({gif: document.getElementById ('blah'), max_width:document.documentElement.clientWidth/2});
     sup1.load ();
 </script>
 
