--- a/gifimitate/index.html
+++ b/gifimitate/index.html
@@ -51,7 +51,7 @@
     <meta id="theme-color" name="theme-color" content="#ffffff">
 
 
-    <title>getUserMedia</title>
+    <title>GIF Imitate</title>
 
 </head>
 
