--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 								<p>Imitate GIF with step recording</p>
 																<p>HTML5,JS</p>
 								<p>For Chrome and Firefox on Desktop and Mobile</p>	
+								<a href="https://kahrzdn.github.io/gifimitate/index.html"><span class="label">GIF Imitate</span></a>
 						</div>
 					</section>
 				<!-- CTA -->
