--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</section>
 <!-- Seven -->
 					<section id="seven" class="spotlight">
-						<div class="content">
+						<div class="image"><img src="gifimitate/dance.gif" alt="" /></div><div class="content">
 								<h2>W7<br />	
 									GIF Imitate</h2>
 								<p>Imitate GIF with step recording</p>
@@ -143,7 +143,7 @@
 									Plate</h2>
 								<p>Chasing Collection Multiuser Web Game</p>
 																<p>HTML5,JS,CSS3d,THREE.JS</p>
-								<p>Browssr Desktop Mobile</p>	
+								<p>Browser Desktop/Mobile</p>	
 								<a href="https://kahrzdn.github.io/gifimitate/index.html"><span class="label">GIF Imitate</span></a>
 						</div>
 					</section>
