--- a/index.html
+++ b/index.html
@@ -140,12 +140,10 @@
 					<section id="eight" class="spotlight">
 						<div class="content">
 								<h2>W8<br />	
-									Plate</h2>
-								<p>Chasing Collection Multiuser Web Game</p>
+									Chase</h2>
+								<p>Chase Collecting Multiuser Web Game</p>
 																<p>HTML5,JS,CSS3d,THREE.JS</p>
 								<p>Browser Desktop/Mobile</p>	
-								<a href="https://kahrzdn.github.io/gifimitate/index.html"><span class="label">GIF Imitate</span></a>
-						</div>
 					</section>
 				<!-- CTA -->
 			
