--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</section>
 <!-- Seven -->
 					<section id="seven" class="spotlight">
-						<div class="image"><img src="gifimitate/dance.gif" alt="" /></div><div class="content">
+						<div class="image"><img src="gifimitate/dance.gif" alt="" style="background-color:white;"/></div><div class="content" >
 								<h2>W7<br />	
 									GIF Imitate</h2>
 								<p>Imitate GIF with step recording</p>
