optimized pic size, text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<div class="image"><img src="images/kiwi.png" alt="" /></div><div class="content">
 								<h2>W4<br />	
 									KIWI</h2>
-								<p>Multiuser matching game</p>
+								<p>Multiplayer matching game</p>
 								<p>HTML5,JS,Phaser.io, Node.js, Socket.IO</p>
 								<a href="http://l1l.dk/kiwi">http://l1l.dk/kiwi<span class="label"></span></a>
 							</header>
@@ -141,8 +141,8 @@
 						<div class="content">
 								<h2>W8<br />	
 									Chase</h2>
-								<p>Chase Collecting Multiuser Web Game</p>
-																<p>HTML5,JS,CSS3d,THREE.JS</p>
+								<p>Collecting Multiplayer Web Game</p>
+																<p>HTML5,JS,WebGL,THREE.JS</p>
 								<p>Browser Desktop/Mobile</p>	
 					</section>
 				<!-- CTA -->
