--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								<h2>W8<br />	
 									Chase</h2>
 								<p>Collecting Multiplayer Web Game</p>
-																<p>HTML5,JS,WebGL,THREE.JS</p>
+																<p>HTML5,JS,Socket.IO,Node.js,WebGL,THREE.JS</p>
 								<p>Browser Desktop/Mobile</p>	
 					</section>
 				<!-- CTA -->
