--- a/index.html
+++ b/index.html
@@ -136,8 +136,21 @@
 																<p>HTML5,JS,Socket.IO,Node.js,WebGL,THREE.JS</p>
 								<p>Browser Desktop/Mobile</p>	
 					</section>
+					<!-- Nine -->
+					<section id="nine" class="spotlight">
+						<div class="image"><img src="images/shooter.gif" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W9<br />	
+									GIFChoice</h2>
+								<p>mini games in twitter.com using stopable GIF</p>
+																<p>twitter, GIF</p>
+								<p>Browser Desktop/Mobile</p>
+								<a href="https://twitter.com/gifchoice"><span class="label">GIFChoice</span></a>
+							</div>
+					</section>
+			
 				<!-- CTA -->
 			
+
 
 				<!-- Footer -->
 					<footer id="footer">
