--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									GIFChoice</h2>
 								<p>mini games in twitter.com using stopable GIF</p>
 																<p>twitter, GIF</p>
-								<p>Browser Desktop/Mobile</p>
+								<p>Twitter native apps, Desktop/Mobile browsers</p>
 								<a href="https://twitter.com/gifchoice"><span class="label">GIFChoice</span></a>
 							</div>
 					</section>
