spelling bee sting

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="image"><img src="images/shooter.gif" alt="" style="background-color:white;"/></div><div class="content" >
 								<h2>W9<br />	
 									GIFChoice</h2>
-								<p>mini games in twitter.com using stopable GIF</p>
+								<p>mini games in twitter.com using stoppable GIF</p>
 																<p>twitter, GIF</p>
 								<p>Twitter native apps, Desktop/Mobile browsers</p>
 								<a href="https://twitter.com/gifchoice"><span class="label">GIFChoice</span></a>
