--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 					</section>
 					<!-- Nine -->
 					<section id="nine" class="spotlight">
-						<div class="image"><img src="images/shooter.gif" alt="" style="background-color:white;"/></div><div class="content" >
+						<div class="image"><img src="images/rock.gif" alt="" style="background-color:white;"/></div><div class="content" >
 								<h2>W9<br />	
 									GIFChoice</h2>
 								<p>mini games in twitter.com using stoppable GIF</p>
 																<p>twitter, GIF</p>
 								<p>Twitter native apps, Desktop/Mobile browsers</p>
-								<a href="https://twitter.com/gifchoice"><span class="label">GIFChoice</span></a>
+								<blockquote class="twitter-tweet" lang="en"> <a href="https://twitter.com/GIFchoice/status/706782386370039808"></a></blockquote>
 							</div>
 					</section>
 			
