--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>BERLIN W-Compilation</h2>
-							<p>Weekly prototype<br />
+							<p>Weekly prototypes<br />
 							crafted by Carsten Jørgensen</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
