--- a/index.html
+++ b/index.html
@@ -146,6 +146,40 @@
 								<a href="https://twitter.com/gifchoice"><span class="label">GIFChoice</span></a>
 							</div>
 					</section>
+					<!-- Ten -->
+					<section id="ten" class="spotlight">
+						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W10<br />
+									Sonance Order</h2>
+								<p>Global Game Jam game</p>
+																<p>Unity</p>
+								<p>Desktop App</p>
+								<a href="http://globalgamejam.org/2016/games/sonance-order"><span class="label">Sonance Order</span></a>
+							</div>
+					</section>
+					<!-- El -->
+					<section id="w11" class="spotlight">
+						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W11<br />
+									Democratic Sketching</h2>
+								<p>Generative Art, sketching using a pixular voting system</p>
+																<p>Processing</p>
+								<p>Desktop App</p>
+								<a href="http://l1l.dk/genart/MIKADOOM.mp4"><span class="label">Ghost</span></a>
+
+							</div>
+					</section>
+					<section id="w13" class="spotlight">
+						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W11<br />
+									Democratic Sketching</h2>
+								<p>Generative Art, sketching using a pixular voting system</p>
+																<p>Processing</p>
+								<p>Desktop App</p>
+								<a href="http://l1l.dk/genart/ghost.mp4"><span class="label">Ghost</span></a>
+
+							</div>
+					</section>
 
 				<!-- CTA -->
 
