Corrections and picture

--- a/index.html
+++ b/index.html
@@ -159,24 +159,13 @@
 					</section>
 					<!-- El -->
 					<section id="w11" class="spotlight">
-						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
+						<div class="image"><img src="images/democratic.png" alt="" style="background-color:white;"/></div><div class="content" >
 								<h2>W11<br />
 									Democratic Sketching</h2>
 								<p>Generative Art, sketching using a pixular voting system</p>
 																<p>Processing</p>
 								<p>Desktop App</p>
 								<a href="http://l1l.dk/genart/MIKADOOM.mp4"><span class="label">Ghost</span></a>
-
-							</div>
-					</section>
-					<section id="w13" class="spotlight">
-						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
-								<h2>W11<br />
-									Democratic Sketching</h2>
-								<p>Generative Art, sketching using a pixular voting system</p>
-																<p>Processing</p>
-								<p>Desktop App</p>
-								<a href="http://l1l.dk/genart/ghost.mp4"><span class="label">Ghost</span></a>
 
 							</div>
 					</section>
