added extra projects

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 					<!-- Eight -->
 					<section id="eight" class="spotlight">
-						<div class="content">
+						<div class="image"><img src="images/chase.png" alt="" style="background-color:white;"/></div><div class="content" >
 								<h2>W8<br />
 									Chase</h2>
 								<p>Collecting Multiplayer Web Game</p>
@@ -165,8 +165,66 @@
 								<p>Generative Art, sketching using a pixular voting system</p>
 																<p>Processing</p>
 								<p>Desktop App</p>
-								<a href="http://l1l.dk/genart/MIKADOOM.mp4"><span class="label">Ghost</span></a>
+								<a href="http://l1l.dk/genart/MIKADOOM.mp4"><span class="label">Prince</span></a>
 
+							</div>
+					</section>
+					<section id="w12" class="spotlight">
+						<div class="image"><img src="images/CrayonClockChoose.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W12<br />
+									Crayon Clock</h2>
+								<p>24 hour clock watchface for Google Wear. Set and log activity.</p>
+																<p>Java </p>
+								<p>Desktop App</p>
+
+							</div>
+					</section>
+					<section id="w13" class="spotlight">
+						<div class="image"><img src="images/shipshapeshift.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W13<br />
+									Ship Shape Shift</h2>
+								<p>Ludum Dare 35 time limited hack. Theme shapeshifting. Puzzle game with random generated levels.</p>
+																<p>HTML5,JS,Phaser.io  </p>
+							<a href="http://l1l.dk/shipshapeshift"><span class="label">Ship Shape Shift</span></a>
+							</div>
+					</section>
+					<section id="w14" class="spotlight">
+						<div class="image"><img src="images/sonanceorder.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W14<br />
+									Sonance Order</h2>
+								<p>Global Game Jam game</p>
+																<p>Unity</p>
+								<p>Desktop App</p>
+								<a href="http://globalgamejam.org/2016/games/sonance-order"><span class="label">Sonance Order</span></a>
+							</div>
+					</section>
+					<section id="w15" class="spotlight">
+						<div class="image"><img src="images/kirkebyroller.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W15<br/> Kirkeby Roller
+									</h2>
+								<p>Roller game in a Per Kirkeby brik nightmare</p>
+																<p>Unity</p>
+								<p>Desktop App</p>
+							</div>
+					</section>
+					<section id="w16" class="spotlight">
+						<div class="image"><img src="images/thewinner.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W16<br/>the winner
+									</h2>
+								<p>Automated verbal live sport prediction using betting information</p>
+																<p>HTML,JS,nodejs,socket.io</p>
+								<p>web</p>
+								<a href="http://thewinner.live"><span class="label">thewinner.live</span></a>
+							</div>
+					</section>
+					<section id="w17" class="spotlight">
+						<div class="image"><img src="images/colorghost.png" alt="" style="background-color:white;"/></div><div class="content" >
+								<h2>W17<br/>Exploding Lines
+									</h2>
+								<p>Generative art animation using adaptive rotating growing lines</p>
+																<p>Processing</p>
+								<p>web</p>
+								<a href="http://l1l.dk/genart/color.mp4"><span class="label">Ghost</span></a>
 							</div>
 					</section>
 
