--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>BERLIN W-Compilation</h2>
+							<h2>BERLIN 2016 W-Compilation</h2>
 							<p>Weekly prototypes<br />
 							crafted by Carsten Jørgensen</p>
 						</div>
