--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>BERLIN W-Compilation</title>
+	<title>BERLIN Week-Compilation</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
