--- a/scrowl/index.html
+++ b/scrowl/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1, maximum-scale=1">
-</head>
-
-<body>
-  <main>
-  </main>
-  <script src="sketch.js"></script>
-</body>
-
+	<head>
+		<meta charset="utf-8">
+		<title>My first three.js app</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+		<script type="module" src="/main.js"></script>
+	</body>
 </html>
