--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -9,6 +9,18 @@
   <meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1, maximum-scale=1">
 </head>
 
+<script>
+  const element = document.querySelector('div');
+
+  element.addEventListener('touchstart', (e) => {
+      // is not near edge of view, exit
+      if (e.pageX > 20 && e.pageX < window.innerWidth - 20) return;
+
+      // prevent swipe to navigate back gesture
+      e.preventDefault();
+  });
+</script>
+
 <body>
   <main>
   </main>
