prevent swipe back gesture

--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -10,15 +10,25 @@
 </head>
 
 <script>
-  const element = document.querySelector('div');
+  function touchStart(ev) {
+    if (ev.touches.length === 1) {
+      const touch = ev.touches[0];
+      if (
+        touch.clientX < window.innerWidth * 0.1 ||
+        touch.clientX > window.innerWidth * 0.9
+      ) {
+        ev.preventDefault();
+      }
+    }
+  }
 
-  element.addEventListener('touchstart', (e) => {
-      // is not near edge of view, exit
-    
+  // Safari defaults to passive: true for the touchstart event, so we need  to explicitly specify false
+  // See https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener
+  const options= { passive: false };
 
-      // prevent swipe to navigate back gesture
-      e.preventDefault();
-  });
+  window.addEventListener("touchstart", touchStart, options);
+
+  return () => window.removeEventListener("touchstart", touchStart, options);
 </script>
 
 <body>
