--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -10,25 +10,10 @@
 </head>
 
 <script>
-  function touchStart(ev) {
-    if (ev.touches.length === 1) {
-      const touch = ev.touches[0];
-      if (
-        touch.clientX < window.innerWidth * 0.1 ||
-        touch.clientX > window.innerWidth * 0.9
-      ) {
-        ev.preventDefault();
-      }
-    }
-  }
 
-  // Safari defaults to passive: true for the touchstart event, so we need  to explicitly specify false
-  // See https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener
-  const options= { passive: false };
+window.open(url, '_blank').focus();
 
-  window.addEventListener("touchstart", touchStart, options);
-
-  return () => window.removeEventListener("touchstart", touchStart, options);
+}
 </script>
 
 <body>
