--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="manifest" href="manifest.json">   
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  
+  <meta name="apple-mobile-web-app-title" content="Notentool">
+<link rel="manifest" href="manifest.json">   
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
