--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   <meta name="apple-mobile-web-app-title" content="Notentool">
 <link rel="manifest" href="manifest.json">   
