--- a/scrowl/shades.html
+++ b/scrowl/shades.html
@@ -5,12 +5,13 @@
 <head>
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
-  <meta name="apple-mobile-web-app-title" content="Notentool">
+  <meta name="apple-mobile-web-app-title" content="Shades 2024">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Shades</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1, maximum-scale=1">
 </head>
