--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
             vec2 st = gl_FragCoord.xy/u_resolution.xy;
             vec2 m = u_mouse/u_resolution.xy;
             float d=distance(st,m);
-            
             float dc =distance(st,vec2(0.5));
             vec3 rgb = vec3(d,sin(d*cos(u_time*.013)*350.),sin(-dc*cos(u_time*.015)*300.));
-            gl_FragColor = vec4(rgb.y+rgb.z,rgb.x,rgb.x, 1.);
+            gl_FragColor = vec4(rgb.y+rgb.z,rgb.x,rgb.y, 1.);
         }
     </script>
     <script>
