--- a/shaders/index.html
+++ b/shaders/index.html
@@ -18,7 +18,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js"></script>
 
     <script id="vertexShader" type="x-shader/x-vertex">
-        uniform float time;
+        uniform float u_time;
         uniform vec2 resolution;
         void main()	{
             gl_Position = vec4( position, 1.0 );
@@ -26,15 +26,16 @@
     </script>
 
     <script id="fragmentShader" type="x-shader/x-fragment">
-        uniform float time;
-        uniform vec2 resolution;
+        uniform vec2 u_resolution;
+        uniform float u_time;
+        uniform vec2 u_mouse;
         void main()	{
-            vec2 course = vec2(3000.*cos(time/100.),300.*sin(time/100.));
+            vec2 course = vec2(3000.*cos(u_time/100.),300.*sin(u_time/100.));
             float x = mod(course.x + gl_FragCoord.x, 200.) < 195. ? 0.3 : 0.5;
             x = mod(course.x + gl_FragCoord.x, 200.) < 5. ? 0.2 : x;
             float y = mod(course.y + gl_FragCoord.y, 200.) < 195. ? 0.3 : 0.5;
             y = mod(course.y + gl_FragCoord.y, 200.) < 5. ? 0.2 : y;
-            gl_FragCoogl_FragColor = vec4(vec3(x+y), 1.);
+            gl_FragColor = vec4(vec3(x+y), 1.);
         }
     </script>
     <script>
@@ -59,8 +60,9 @@
             scene = new THREE.Scene();
 
             uniforms = {
-                time: { type: "f", value: 1.0 },
-                resolution: { type: "v2", value: new THREE.Vector2() }
+                u_time: { type: "f", value: 1.0 },
+                u_resolution: { type: "v2", value: new THREE.Vector2() },
+                u_mouse: { type: "v2", value: new THREE.Vector2() }
             };
 
             material = new THREE.ShaderMaterial({
@@ -76,9 +78,14 @@
             renderer.setPixelRatio(window.devicePixelRatio ? window.devicePixelRatio : 1);
             container.appendChild(renderer.domElement);
 
-            uniforms.resolution.value.x = window.innerWidth;
-            uniforms.resolution.value.y = window.innerHeight;
+            uniforms.u_resolution.value.x = window.innerWidth;
+            uniforms.u_resolution.value.y = window.innerHeight;
             renderer.setSize(window.innerWidth, window.innerHeight);
+
+            document.onmousemove = function(e){
+              uniforms.u_mouse.value.x = e.pageX
+              uniforms.u_mouse.value.y = window.innerHeight-e.pageY
+            }
         }
 
         function animate() {
@@ -89,7 +96,7 @@
         function render() {
             var elapsedMilliseconds = Date.now() - startTime;
             var elapsedSeconds = elapsedMilliseconds / 1000.;
-            uniforms.time.value = 60. * elapsedSeconds;
+            uniforms.u_time.value = 60. * elapsedSeconds;
             renderer.render(scene, camera);
         }
     </script>
